--- a/MemoShareApp/AppShell.xaml
+++ b/MemoShareApp/AppShell.xaml
@@ -4,18 +4,20 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:MemoShareApp.Views"
-    Title="メモ共有アプリ">
+    Title="メモ共有アプリ"
+    Shell.NavBarIsVisible="True"
+    Shell.BackgroundColor="{StaticResource Primary}"
+    Shell.ForegroundColor="White"
+    Shell.TitleColor="White">
 
     <TabBar>
         <ShellContent
             Title="マイメモ"
-            Icon="memo_icon.png"
             ContentTemplate="{DataTemplate views:MemoListPage}"
             Route="MemoListPage" />
 
         <ShellContent
             Title="共有メモ"
-            Icon="shared_icon.png"
             ContentTemplate="{DataTemplate views:SharedMemoListPage}"
             Route="SharedMemoListPage" />
     </TabBar>
