--- a/MemoShareApp/MainPage.xaml
+++ b/MemoShareApp/MainPage.xaml
@@ -9,6 +9,7 @@
             Spacing="25">
             <Image
                 Source="dotnet_bot.png"
+                WidthRequest="300"
                 HeightRequest="185"
                 Aspect="AspectFit"
                 SemanticProperties.Description="dot net bot in a submarine number ten" />
